# be-task-ca

./: ANSWERS.md  README.md  pyproject.toml  scripts.py
be_task_ca/adapters/repositories/cart_item/: in_memory_cart_item_repository.py
be_task_ca/adapters/repositories/item/: in_memory_item_repository.py
be_task_ca/adapters/repositories/user/: in_memory_user_repository.py
be_task_ca/domain/entities/: cart_item.py  item.py  user.py
be_task_ca/drivers/rest/: app.py  dependencies.py  exception_handlers.py
be_task_ca/drivers/rest/routers/: cart_router.py  item_router.py  user_router.py
be_task_ca/drivers/rest/schemas/: cart_schemas.py  item_schemas.py  user_schemas.py
be_task_ca/ports/repositories/: cart_item_repository.py  item_repository.py  user_repository.py
be_task_ca/use_cases/: add_cart_item_to_cart.py  create_item.py  get_all_items.py  get_user_cart.py  save_user.py
be_task_ca/use_cases/commands/: cart_commands.py  item_commands.py  user_commands.py
be_task_ca/use_cases/exceptions/: cart_exceptions.py  item_exceptions.py  user_exceptions.py
prev_version/item/: model.py
prev_version/user/: model.py
tests/e2e/: test_api.py
tests/integration/repositories/: test_cart_item_repository.py  test_item_repository.py  test_user_repository.py
tests/unit/use_cases/: test_add_cart_item_to_cart.py  test_create_item.py  test_get_all_items.py  test_get_user_cart.py  test_save_user.py
