[tool.poetry]
name = "be-task-ca"
version = "0.1.0"
description = ""
authors = ["Franz Hess <franz.hess@helu.io>"]
readme = "README.md"
packages = [{ include = "be_task_ca" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.12.5"
sqlalchemy = "^2.0.11"
fastapi = "^0.128.0"
uvicorn = "^0.22.0"
email-validator = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pydeps = "^3.0.2"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
flake8 = "^7.3.0"
flake8-bugbear = "^25.11.29"
flake8-pyproject = "^1.2.4"
cohesion = "^1.1.0"
black = "^26.1.0"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "scripts:start"
schema = "be_task_ca.commands:create_db_schema"
graph = "scripts:create_dependency_graph"
tests = "scripts:run_tests"
lint = "scripts:run_linter"
format = "scripts:auto_format"
typing = "scripts:check_types"

[tool.flake8]
per-file-ignores = [
    'api.py:B008',
    'be_task_ca/domain/entities/*.py:H601',
    'be_task_ca/use_cases/commands/*.py:H601',
    'be_task_ca/use_cases/exceptions/*.py:H601,B042',
    'be_task_ca/drivers/rest/schemas/*.py:H601',
    'be_task_ca/ports/repositories/*.py:H601',
]
max-line-length = 88
count = true

[tool.mypy]
#plugins = "sqlalchemy.ext.mypy.plugin"

[tool.pytest.ini_options]
testpaths = ["tests", "be_task_ca"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [".venv", ".git", "__pycache__", "*.egg-info", "dist", "build"]
addopts = "--ignore=.venv"